# network-intrusion-detection

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: app.py
app/components/: about.py  data_upload.py  eda.py  home.py  model_training.py  predictions.py
src/: data_processor.py  feature_engineer.py  models.py  utils.py  visualiser.py
